--- a/recipes/css/biryani.css
+++ b/recipes/css/biryani.css
@@ -1,3 +1,17 @@
+body {
+  background-color: black;
+  color: whitesmoke;
+}
+
 h1 {
+  text-align: center;
+}
+
+img {
+  width: 300px;
+  height: auto;
+}
+
+.desc {
   text-align: center;
 }
