--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,32 @@ li a {
 .Book ul li {
   margin: 9px;
 }
+
+
+/* Styling The Footer */
+footer {
+  background-color: #11111b;
+  padding-bottom: 20px;
+}
+
+footer h3 {
+  margin-right: -20px;
+  margin-bottom: 4rem;
+  padding-top: 20px;
+}
+
+.contact-list {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  list-style: none;
+}
+
+.contact-list li a {
+  color: #f38ba8;
+  font-size: 1rem;
+}
+
+.contact-list li {
+  margin: auto;
+}
